@@ -5,6 +5,7 @@ import com.example.teammanager.entities.Project;
 import com.example.teammanager.entities.User;
 import com.example.teammanager.entities.Work;
 import com.example.teammanager.exception.TaskNotFoundException;
+import com.example.teammanager.exception.UnauthorizedMemberException;
 import com.example.teammanager.exception.UserNotFoundException;
 import com.example.teammanager.repositories.ProjectRepository;
 import com.example.teammanager.repositories.UserRepository;
@@ -22,23 +23,34 @@ public class WorkService {
     private final WorkRepository workRepository;
     private final ProjectRepository projectRepository;
     private final UserRepository userRepository;
-    private final ProjectService projectService;
+    private final UserService userService;
+    private ProjectService projectService;
 
     @Autowired
     public WorkService(
             WorkRepository workRepository,
             ProjectRepository projectRepository,
             UserRepository userRepository,
+            UserService userService,
             @Lazy ProjectService projectService
     ) {
         this.workRepository = workRepository;
         this.projectRepository = projectRepository;
         this.userRepository = userRepository;
+        this.userService = userService;
         this.projectService = projectService;
     }
 
     public List<WorkDto> getWorkByProjectId(Long projectId) {
-        return workRepository.findByProjectId(projectId).stream().map(this::toDto).collect(Collectors.toList());
+        projectService.getMemberProjectById(projectId);
+        return workRepository.findByProjectId(projectId).stream().map(this::toDto).toList();
+    }
+
+    public List<WorkDto> getAssignedWorkByProjectId(Long projectId) {
+        var currentUser = userService.getCurrentUser();
+        return workRepository.findByProjectId(projectId).stream()
+                .filter(work -> work.getAssignedUser() != null && work.getAssignedUser().getId().equals(currentUser.getId()))
+                .map(this::toDto).toList();
     }
 
     public List<WorkDto> getWorkByAssignedUserId(Long userId) {
@@ -53,6 +65,7 @@ public class WorkService {
 
         return work;
     }
+
     public WorkDto createWork(WorkDto dto) {
         Project project = projectRepository.findById(dto.projectId())
                 .orElseThrow(() -> new RuntimeException("Project not found"));
@@ -66,16 +79,31 @@ public class WorkService {
         Work work = new Work(null, dto.title(), dto.description(), dto.status(), project, assignedUser);
         return toDto(workRepository.save(work));
     }
+
     public void deleteWorkByProjectAndId(Long projectId, Long taskId) {
         var project = projectService.getAdminProjectById(projectId);
         var work = getWorkInProjectById(project, taskId);
         workRepository.delete(work);
     }
+
     @Transactional
     public void deleteTasksInProject(Long id) {
         var project = projectService.getAdminProjectById(id);
         var works = project.getWorks();
         workRepository.deleteAll(works);
+    }
+
+    @Transactional
+    public void editStatus(Long workId, Long projectId, String status) {
+        var user = userService.getCurrentUser();
+        var project = projectService.getMemberProjectById(projectId);
+        var work = getWorkInProjectById(project, workId);
+        if (
+                !project.getAdmin().getId().equals(user.getId())
+                && !work.getAssignedUser().getId().equals(user.getId())
+        ) throw new UnauthorizedMemberException();
+        work.setStatus(status);
+        workRepository.save(work);
     }
 
     private WorkDto toDto(Work work) {
@@ -101,8 +129,4 @@ public class WorkService {
 
         return toDto(work);
     }
-
-
-
-
 }
